...
                              : '#34313D'}
        returnKeyType="send"
        //TODO - use onPress, onLongPress and onSubmitEditing props
        value={task}
        onChangeText={setTask}
        onSubmitEditing={() => handleAddNewTask()}
        testID="input:newSkill"
      />
      <TouchableOpacity
        testID="button:add"
        activeOpacity={0.7}
        style={[styles.addButton,{backgroundColor: nightMode 
                                                ? '#988BC7'
                                                : '#3FAD27'}]}
        //TODO - use onPress props
        onPress={() => handleAddNewTask()}
...
