...
  const {nightMode} = useColorTheme();

  return (
    <FlatList
      data={tasks}
      keyExtractor={item => String(item.id)}
      testID="flatlist:skills"
      renderItem={({ item, index }) => {
        return (
          <TouchableOpacity
            activeOpacity={0.7}
            //TODO - use onPress, onLongPress and style props
            onPress={()=>onPress(item.id)}
...
